# tea_lbl_run3

./: .gitignore  README.md
apps/: lbl_histogramer.cpp  lbl_mc_efficiencies_calculator.cpp  lbl_renamer.cpp  lbl_skimmer.cpp  lbl_visualization_maker.cpp
configs/: bw_run3_example_skimmer_config.py  lbl_datacards_config.py  lbl_histogramer_config.py  lbl_histogramer_list.py  lbl_mc_efficiencies_calculator_config.py  lbl_params.py  lbl_paths.py  lbl_plotter_config.py  lbl_renamer_config.py  lbl_renamer_list.py  lbl_skimmer_config.py  lbl_skimmer_list.py
libs/user_extensions/include/: CaloTower.hpp  Electron.hpp  LbLEvent.hpp  LbLHistogramsFiller.hpp  LbLObjectsManager.hpp  LbLSelections.hpp  Muon.hpp  Photon.hpp  Track.hpp  UserExtensionsHelpers.hpp  ZDCEnergy.hpp
libs/user_extensions/src/: CaloTower.cpp  Electron.cpp  LbLEvent.cpp  LbLHistogramsFiller.cpp  LbLObjectsManager.cpp  LbLSelections.cpp  Muon.cpp  Photon.cpp  Track.cpp  ZDCEnergy.cpp
plotting_macros/: plot_briefing_limits.C  plot_fig_2_a.C  plot_fig_2_b.C  plot_fig_2_c.C  plot_fig_2_d.C  plot_fig_2_e.C  plot_fig_2_f.C  plot_fig_2_g.C  plot_fig_2_h.C  plot_fig_3.C  plot_fig_4_a.C  plot_fig_4_b.C  plot_fig_4_c.C  plot_fig_4_d.C  plot_fig_5.C  plot_fig_6_a.C  plot_fig_6_b.C  plot_fig_6_c.C  plot_fig_6_d.C  plot_fig_6_e.C  plot_fig_6_f.C  plot_fig_6_g.C  plot_fig_6_legend.C  plot_fig_7_a.C  plot_fig_7_b.C  plot_fig_8_a.C  plot_fig_8_b.C  plot_fig_9.C  style.h
tea/: .gitignore  .gitmodules  CMakeLists.txt  build.sh  create.py  install.sh  setup.sh  update.sh
tea/apps/examples/: condor_runner.py  datacards_producer.py  hepmc2root.cpp  histogrammer.cpp  plot_abcd_hists.py  plotter.py  skimmer.cpp  submitter.py
tea/configs/examples/: datacards_config.py  golden_json_config.py  histogrammer_config.py  plotter_config.py  scale_factors_config.py  skimmer_config.py
tea/jsonPOG/: .gitlab-ci.yml
tea/jsonPOG/examples/: README.md
tea/jsonPOG/script/: testMR.sh
tea/libs/core/: CMakeLists.txt
tea/libs/core/include/: ArgsManager.hpp  Collection.hpp  ConfigManager.hpp  CutFlowManager.hpp  Event.hpp  EventProcessor.hpp  EventReader.hpp  EventWriter.hpp  Helpers.hpp  Logger.hpp  PhysicsObject.hpp  ScaleFactorsManager.hpp
tea/libs/core/src/: ArgsManager.cpp  ConfigManager.cpp  CutFlowManager.cpp  Event.cpp  EventProcessor.cpp  EventReader.cpp  EventWriter.cpp  PhysicsObject.cpp  ScaleFactorsManager.cpp
tea/libs/extensions/: CMakeLists.txt
tea/libs/extensions/include/: ExtensionsHelpers.hpp  HepMCParticle.hpp  HepMCProcessor.hpp  NanoDimuonVertex.hpp  NanoElectron.hpp  NanoEvent.hpp  NanoEventProcessor.hpp  NanoGenParticle.hpp  NanoJet.hpp  NanoMuon.hpp
tea/libs/extensions/src/: HepMCParticle.cpp  NanoDimuonVertex.cpp  NanoEvent.cpp  NanoEventProcessor.cpp  NanoGenParticle.cpp  NanoJet.cpp  NanoMuon.cpp
tea/libs/histogramming/: CMakeLists.txt
tea/libs/histogramming/include/: HistogramsHandler.hpp
tea/libs/histogramming/src/: HistogramsFiller.cpp  HistogramsHandler.cpp
tea/pylibs/: CMakeLists.txt
tea/pylibs/abcdTools/: ABCDHelper.py  ABCDHistogramsHelper.py  ABCDPlotter.py
tea/pylibs/limits/: DatacardsProcessor.py  HistogramsManager.py
tea/pylibs/logger/: Logger.py
tea/pylibs/plotting/: CmsLabelsManager.py  Histogram.py  HistogramNormalizer.py  HistogramPlotter.py  Legend.py  Sample.py  Styler.py
tea/pylibs/scaleFactors/: ScaleFactorsReader.py
tea/pylibs/submitter/: SubmissionManager.py
tea/templates/: Event.template.hpp  PhysicsObject.template.hpp  app.template.cpp  condor_config.template.sub  condor_run.template.sh  config.template.py
utils/: lbl_alp_coupling_to_cross_section.py  lbl_alp_cross_section_to_coupling.txt  lbl_count_events.py  lbl_find_nasty_files.py  lbl_find_threshold.py  lbl_fit_zdc.py  lbl_get_alp_coupling_vs_cross_section_functions.py  lbl_get_nee_thresholds.py  lbl_get_qed_cross_sections.py  lbl_get_simple_results.py  lbl_helpers.py  lbl_make_visualizations.py  lbl_merge_n_hiforest_files.py  lbl_plot_alps_limits.py  lbl_plot_combine_aco.py  lbl_plot_conversions.py  lbl_prepare_datacards.py  lbl_prepare_datacards_2015.py  lbl_print_cut_flow.py  lbl_rename_files.py  lbl_run_combine_for_limits.py  lbl_scale_unfolding_histograms.py
